# blaue_tonne_rust

./: .dockerignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  plans.yaml
src/: config.rs  download.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  openapi.rs  pdf_parser.rs  router.rs  state.rs
tests/: test_api.rs  test_config.rs  test_errors.rs  test_middleware.rs  test_pdf_parser.rs
