[package]
name = "blaue_tonne_rust"
version = "0.1.0"
edition = "2024"

[[test]]
name = "test_api"
path = "tests/test_api.rs"

[[test]]
name = "test_pdf_parser"
path = "tests/test_pdf_parser.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
bytes = "1"
pdf-extract = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dashmap = "6"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockito = "1"
urlencoding = "2"
